--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,1 +1,9 @@
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-V1N1H1JK4L"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-V1N1H1JK4L');
+</script>
