--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -7,3 +7,40 @@
 
   gtag('config', 'G-V1N1H1JK4L');
 </script>
+
+
+
+<script>
+function sendReadEvent(title, numberOfCharacters, author) {
+    gtag('event', 'read_article', {
+        "author": author,
+        "title": title,
+        "number_of_characters": numberOfCharacters,
+    });
+}
+
+document.addEventListener("DOMContentLoaded", () => {
+
+    const readArticle1Button = document.getElementById("read-article-1");
+
+    if (readArticle1Button) {
+        // Skickar event vid klick på artikel 1
+        readArticle1Button.addEventListener("click", () => {
+            sendReadEvent("Article 1", 50, "Linus R")
+        });
+
+        // Skickar event vid klick på artikel 2
+        document.getElementById("read-article-2").addEventListener("click", () => {
+            sendReadEvent("Article 2", 100, "Anna S")
+        });
+
+        // Skickar event vid klick på artikel 3
+        document.getElementById("read-article-3").addEventListener("click", () => {
+            sendReadEvent("Article 3", 150, "Maria S")
+        });
+    }
+
+});
+  
+ console.log("2023-01-23 2")
+</script>
