--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -26,18 +26,15 @@ document.addEventListener("DOMContentLoaded", () => {
     if (readArticle1Button) {
         // Skickar event vid klick på artikel 1
         readArticle1Button.addEventListener("click", () => {
-            sendReadEvent("Article 1", 50, "Linus R")
+            sendReadEvent("Article 1", 50, "Nathalie")
         });
 
-        // Skickar event vid klick på artikel 2
-        document.getElementById("read-article-2").addEventListener("click", () => {
-            sendReadEvent("Article 2", 100, "Anna S")
+        // Skickar event vid klick på Beställ
+        document.getElementById("order").addEventListener("click", () => {
+            sendReadEvent("Order", 100, "Nathalie")
         });
 
-        // Skickar event vid klick på artikel 3
-        document.getElementById("read-article-3").addEventListener("click", () => {
-            sendReadEvent("Article 3", 150, "Maria S")
-        });
+   
     }
 
 });
