--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -19,35 +19,32 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 
 <script>
-function sendReadEvent(title, numberOfCharacters, author) {
-    gtag('event', 'read_article', {
-        "author": author,
-        "title": title,
-        "number_of_characters": numberOfCharacters,
-    });
-}
 
-document.addEventListener("DOMContentLoaded", () => {
-
-    const readArticle1Button = document.getElementById("read-article-1");
-
-    if (readArticle1Button) {
-        // Skickar event vid klick på artikel 1
-        readArticle1Button.addEventListener("click", () => {
-            sendReadEvent("Article 1", 50, "Nathalie")
+  function sendInfoEvent(artikelnamn, lastid) {
+        gtag('event', 'read_article', {
+        "artikelnamn": artikelnamn,
+        "lastid": lastid,
         });
-
-        // Skickar event vid klick på Beställ
-        document.getElementById("order").addEventListener("click", () => {
-            sendReadEvent("Order", 100, "Nathalie")
-        });
-
-   
     }
-
-});
   
- console.log("2023-01-23 2")
+     document.addEventListener("DOMContentLoaded", () => {
+
+        const readArticle1Button = document.getElementById("read-article-1");
+    
+        if(readArticle1Button) {
+
+            readArticle1Button.addEventListener("click", () => {
+            sendInfoEvent("Nathalie", 9)
+             });
+
+            document.getElementById("read-article-2").addEventListener("click", () => {
+            sendInfoEvent("Nathalies", 20)
+            });
+        }
+
+  
+    });
+  
+ console.log("please try me");
+    
 </script>
-
-
