--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -34,11 +34,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         if(readArticle1Button) {
 
             readArticle1Button.addEventListener("click", () => {
-            sendInfoEvent("article1" 9)
+            sendInfoEvent("article1", 9)
              });
 
             document.getElementById("article2").addEventListener("click", () => {
-            sendInfoEvent("article2" 20)
+            sendInfoEvent("article2", 20)
             });
         }
 
